Prevent tasks from overflowing  a list-group

--- a/dnd.css
+++ b/dnd.css
@@ -14,6 +14,7 @@ h1 .glyphicon{
     height: 10em;
     width: 100%; 
     margin: auto;
+    overflow: auto;
 }
 .droppable {
     background-color: dodgerblue;
